continued fix of parellex to test on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
+.bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
 
 /* Second image (Portfolio) */
@@ -43,6 +43,7 @@ body, html {
     background-image: url("/img/Background.jpg");
     width: 100%;
     height: 750px;
+    background-repeat: no-repeat;
     background-size: contain;
     background-color: #272727;
 }
@@ -52,8 +53,6 @@ body, html {
     background-image: url("/img/floral.jpg");
     width: 100%;
     height: 500px;
-    background-repeat: no-repeat;
-    background-size: contain;
     background-color: #000000;
 }
 
@@ -62,7 +61,6 @@ body, html {
     background-image: url('/img/self.jpg');
     width: 100%;
     height: 500px;
-    background-size: contain;
     background-color: #000000;
 }
 
@@ -70,8 +68,6 @@ body, html {
     width: 100%;
     height: 1384px;
     background-image: url('/img/resume.png');
-    background-repeat: no-repeat;
-    background-size: contain;
     background-color: #32353b;
 }
 
@@ -79,8 +75,6 @@ body, html {
     width: 100%;
     height: 500px;
     background-image: url('/img/Background.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
     background-color: #272727;
 }
 
@@ -91,34 +85,27 @@ body, html {
 @media only screen and (max-width: 640px) {
     .bgimg-1 {
         width: 100%;
-        height: 640px;
+        height: 475px;
         background-repeat: no-repeat;
         background-size: contain;
         background-color: #272727;
     }
     .bgimg-11 {
-        width: 100%;
-        height: 150px;
-        background-repeat: no-repeat;
-        background-size: contain;
+        display: none;
     }
     .bgimg-2 {
-        width: 100%;
-        height: 150px;
-        background-repeat: no-repeat;
-        background-size: contain;
+        display: none;
     }
     .bgimg-3 {
-        width: 100%;
-        height: 150px;
-        background-size: contain;
+        display: none;
     }
     
     .bgimg-4 {
-        width: 100%;
-        height: 425px;
-        background-repeat: no-repeat;
-        background-size: contain;
+        display: none;
+    }
+    
+    .bgimg-5 {
+        display: none;
     }
 }
 
